R25: re-spec from directional one-liner to JaCoCo coverage instrumentation
The original direction (pipeline over per-variant structural tests) is
now doctrine in testing.adoc (R29) and practice via R281's corpus
migration; what was missing is measurement. Re-specced around a
baseline JaCoCo 0.8.15 run (ad hoc, no pom changes): graphitron 84.5%
line / 72.7% branch from unit+pipeline tiers, sakila-example 76.9% /
49.5% for generated code under the execution tier, emitters weakest.
Deliverables: wire the plugin behind a profile, fix agent-dropping
argLine configs, per-tier coverage split via the existing tier tags,
reporting surface decided at Spec time, no ratchets initially.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019Vm7qqRBUeipLvyXp4vuyv